# muzeyt

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs
src/app/: events.rs  mod.rs
src/audio_stream/: mod.rs
src/file/: mod.rs
src/ui/: debug.rs  file_selector.rs  home_screen.rs  keybinds_panel.rs  mod.rs  player.rs  playing_status.rs  queue.rs  queue_preview.rs  songs_list.rs
src/utility/: mod.rs  queue.rs
