[package]
name = "muzeyt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.28"
crossterm = "0.28"
ytmapi-rs = "0.1"
rodio = "0.21"
symphonia = { version = "0.5", features = ["all"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15"
serde_json = "1.0"
reqwest-middleware = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

